add payroll and slip
