# src/modules/upload/upload.controller.ts
@@ -1,0 +1,46 @@
+import {
+  Controller,
+  Post,
+  UploadedFile,
+  UseInterceptors,
+  BadRequestException,
+} from '@nestjs/common';
+
+import { FileInterceptor } from '@nestjs/platform-express';
+import { UploadService } from './upload.service';
+import { diskStorage } from 'multer';
+import { extname } from 'path';
+import type { Express } from 'express';
+
+@Controller('upload')
+export class UploadController {
+  constructor(private readonly uploadService: UploadService) {}
+
+  @Post('image')
+  @UseInterceptors(
+    FileInterceptor('file', {
+      storage: diskStorage({
+        destination: './uploads',
+        filename: (req, file, callback) => {
+          const uniqueName =
+            Date.now() + '-' + Math.round(Math.random() * 1e9);
+
+          callback(null, uniqueName + extname(file.originalname));
+        },
+      }),
+    }),
+  )
+  async uploadImage(@UploadedFile() file: Express.Multer.File) {
+
+    if (!file) {
+      throw new BadRequestException('File not provided');
+    }
+
+    const result = await this.uploadService.uploadImage(file);
+
+    return {
+      message: 'Image uploaded successfully',
+      data: result,
+    };
+  }
+}
